editor setup for tw attribute

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,19 @@
 {
+  "tailwindCSS.emmetCompletions": true,
+  "editor.inlineSuggest.enabled": true,
+  "editor.quickSuggestions": {
+    "strings": true
+  },
+  "tailwindCSS.experimental.classRegex": [
+    ["classnames\\(([^)]*)\\)", "'([^']*)'"],
+    "class=\"([^\"]*)", // <div class="..." />
+    "tw`([^`]*)", // tw`...`
+    "tw=\"([^\"]*)", // <div tw="..." />
+    "tw={\"([^\"}]*)", // <div tw={"..."} />
+    "tw\\.\\w+`([^`]*)", // tw.xxx`...`
+    "tw\\(.*?\\)`([^`]*)" // tw(Component)`...`
+  ],
+  "css.validate": false,
   "typescript.tsdk": "node_modules/typescript/lib",
   "tailwindcss.jsxPropImportChecking": false,
   "tailwindcss.rootFontSize": 10,
