--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "framer-motion": "10.0.2",
     "next": "12.3.1",
     "next-seo": "5.14.0",
     "react": "18.2.0",
